# choose_one_statistics

./: .env-test  .flake8  .gitignore  CHANGELOG.md  Dockerfile  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini
.conf/nginx/: local.conf
api/statistics/: models.py  routes.py  schemas.py  services.py  utils.py
api/tests/: conftest.py  test_statistics_services.py
core/: database.py  schemas.py  settings.py
tests/: conftest.py  test_statistics_endpoints.py  test_statistics_services.py
