[tool.poetry]
name = "choose_one_statistics"
version = "0.1.0"
description = ""
authors = ["yurii <jurakulek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.2"
fastapi = "^0.61.2"
motor = "^2.3.0"
environs = "^9.2.0"
pyhumps = "^1.6.1"
pytest-asyncio = "^0.14.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
